# HobbyCode

./: .gitignore  elf_reader.py  main.cpp  testOut
AudioVisualizer/: AudioVisualizer.pro  mainwindow.ui
audio/HelloAudio/: CMakeLists.txt  main.cpp
audio/HelloAudio/include/: AudioHandler.h  GuiHandler.h
audio/HelloAudio/src/: AudioHandler.cpp  GuiHandler.cpp  main.cpp
cuda/hello_world/: a.out  main.cu
opengl/helloworld/: CMakeLists.txt  main.cpp  triangle
os/: boot_sect_simple.asm
ros/hello_world/devel/: .catkin  .rosinstall  setup.sh
ros/hello_world/devel/lib/pkgconfig/: first_package.pc
ros/hello_world/devel/share/first_package/cmake/: first_packageConfig.cmake
ros/hello_world/src/first_package/: CMakeLists.txt
ros/hello_world/src/first_package/src/: helloWorld.cpp
